--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   modal_bottom_sheet: ^2.0.0
   select_form_field: ^2.2.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
