--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
   select_form_field: ^2.2.0
   http: ^0.13.4
+  flutter_phone_direct_caller: ^2.1.0
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_test:
