--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,17 @@ dependencies:
   http: ^0.13.4
   flutter_phone_direct_caller: ^2.1.0
   url_launcher: ^6.0.17
+  flutter_sms: ^2.3.2
+  splashscreen: ^1.3.5
+  flutter_launcher_icons: ^0.9.2
+    
+  flutter_icons: ^1.1.0
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/icon/icon.png"
+    
+
+
 
 dev_dependencies:
   flutter_test:
