--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
     
   flutter_icons: ^1.1.0
+  firebase_auth: ^3.3.12
+  firebase_auth_web: ^3.3.10
+  firebase_core: ^1.14.0
+  firebase_database: ^9.0.9
     
     
 
